@@ -182,8 +182,7 @@ class Users:
         user['password'] = self.encrypt(user['password']) 
         return dbconn().users.insert_one(user).inserted_id
     def get(self, _id):
-        fields = {'name': 1, 'email': 1, 'kind': 1}
-        return dbconn().users.find_one({'_id': ObjectId(_id)}, fields)
+        return dbconn().users.find_one({'_id': ObjectId(_id)})
     def getByName(self, name):
         return dbconn().users.find_one({'name': name})
     def list(self):
