@@ -27,3 +27,4 @@
 
 - Blog section added
 - Mistakes in user validation corrected
+- Markdown formatting in complain updates
